--- a/style.css
+++ b/style.css
@@ -253,6 +253,13 @@ nav .fa{
 .student{
   height: 80vh;
 }
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: lightblue;
+    display: none;
+  }
+}
+
 
 
 
